--- a/OCS/templates/base.html
+++ b/OCS/templates/base.html
@@ -287,6 +287,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link {% block nav_analytics %}{% endblock %}" href="{% url 'analytics' %}">
+                        <i class="bi bi-cpu"></i> AI Analytics
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'exportar_reportes' %}">
                         <i class="bi bi-download"></i> Exportar
                     </a>
